--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "17.0.1",
+    "@reduxjs/toolkit": "^1.6.1",
+    "common": "1.0.0",
+    "react": "17.0.2",
     "react-native": "0.64.1",
-    "common": "1.0.0"
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -20,6 +22,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
+    "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
@@ -40,6 +43,12 @@
       "jsx",
       "json",
       "node"
+    ]
+  }
+  ,
+  "workspaces": {
+    "nohoist": [
+      "**"
     ]
   }
 }
